# transcoder-adapters

./: .gitignore  README.md  TODO.md  commands.sh  pyproject.toml  requirements.txt  slurm_batch.sh  slurm_run_debug.sh  watch_latest_logs.sh
analysis/: README.md
analysis/attribution/: attribute.py  relp_context.py  relp_model.py  run_attribution.py
analysis/attribution/prompts_l0_1p4/: ampers_law.txt  assigning_coordinates_0.txt  assigning_coordinates_1.txt  assigning_coordinates_2.txt  but_after_answer.txt  end_think.txt  final_answer.txt  first_alright.txt  i_remember.txt  i_remember_2.txt  mid_sentence_but.txt  mid_sentence_but_wait.txt  pauli_matrices.txt  seems_correct.txt  wait.txt  wait_after_answer.txt  wait_typo_1.txt  (+1 more)
analysis/features/: auto_interp.py  classify_features.py  collect_feature_activations.py  collect_neuron_activations.py  pack_features.py
demo/: adapter_generation_transformers.py  adapter_generation_vllm.py
misc_scripts/: filter_openthoughts_stratified.py  make_hybrid_model.py  prepare_graphs_for_hf.py
models/: __init__.py  gemma2_transcoder.py  qwen2_transcoder.py  qwen2_transcoder_vllm.py  qwen2_with_transcoder_relp.py
training/: config.py  dataset.py  forward_utils.py  losses.py  train.py
training/configs/: direct_ft_7b.yaml  gemma2_2b.yaml  gemma2_2b_debug.yaml  qwq_32b.yaml  qwq_32b_yolo2.yaml  r1_distil_1.5b_debug.yaml  r1_distil_1p5b_debug.yaml  r1_distil_7b.yaml  r1_distil_7b_debug.yaml
training/dataset/: PredefinedDataset.py  __init__.py  collate.py  datasetspecific_config.py  open_thoughts.py  types.py  utils.py
(+8 files in other folders)
